Add email verification upon user create
